--- a/socialnetwork-app-client/src/components/profile/group/list/GroupList.css
+++ b/socialnetwork-app-client/src/components/profile/group/list/GroupList.css
@@ -6,6 +6,7 @@
 
 .group-list .button-create-group {
     margin-top: 10px;
+    margin-right: 208px;
 }
 
 .group-list .group {
@@ -13,12 +14,20 @@
     margin: 15px;
     padding: 10px;
     width: 350px;
+    border: 1px solid #a5a5a5;
+    border-radius: 3px;
 }
 
 .group-list .group img {
     width: 100px;
+    border: 1px solid #a5a5a5;
+    border-radius: 3px;
 }
 
 .group-list .group .group-info {
     padding: 18px;
+}
+
+.group-list .group .group-info .group-link {
+    color: #e0ab69;
 }
