--- a/socialnetwork-app-client/src/components/profile/edit/button/EditButton.css
+++ b/socialnetwork-app-client/src/components/profile/edit/button/EditButton.css
@@ -1,4 +1,8 @@
-.button-edit-profile {
+.button-container {
     display: block;
-    width: 269px;
+    width: 355px;
+}
+
+.button-edit-profile {
+    width: 100%;
 }
