--- a/socialnetwork-app-client/src/components/profile/edit/EditProfile.css
+++ b/socialnetwork-app-client/src/components/profile/edit/EditProfile.css
@@ -1,40 +1,17 @@
 .edit-profile {
-    display: block;
-    margin: 0 auto;
-    margin-top: 20px;
-    width: 500px;
+    background-color: #fff; /* White background for the main container */
+    padding: 20px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
-.edit-profile .current-profile-avatar {
-    margin: 20px 0 20px 0;
-    padding: 0;
-}
-
-.edit-profile .current-profile-avatar img {
-    display: block;
-    width: 297px;
-    border: black;
-}
-
-.edit-profile .avatar-buttons-wrapper {
+.current-profile-avatar {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.edit-profile .button-upload-avatar {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-}
-
-.edit-profile .button-upload-avatar input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-}
-
-.edit-profile .input-width {
-    width: 297px;
+.avatar-buttons-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
 }
