--- a/socialnetwork-app-client/src/components/admin/header/AdminHeader.css
+++ b/socialnetwork-app-client/src/components/admin/header/AdminHeader.css
@@ -1,69 +1,32 @@
+/* AdminHeader.css */
+
 .admin-header {
+    background-color: #000 !important;
+    color: #fff !important;
+}
+
+.admin-header .toolbar {
     display: flex;
     justify-content: space-between;
-    height: 80px;
-    background-color: #e0ac69;
-    border-bottom: 1px solid #a5a5a5;
+    align-items: center;
 }
 
 .admin-header .title {
-    font-size: 26px;
-    margin-top: 2px;
-    padding: 20px;
-    color: #2f2f2f;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
-.admin-header .admin-profile {
+.admin-profile {
     display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
-.admin-header .admin-profile img {
-    display: block;
-    margin-top: 13px;
-    margin-right: 10px;
-    width: 55px;
-    height: 55px;
-    border: 2px solid #343a40;
+.admin-profile .username {
+    margin-left: 10px;
+    font-weight: bold;
 }
 
-.admin-header .admin-profile .dropdown-profile {
-    margin-top: 22px;
-    margin-right: 30px;
+.menu-item {
+    color: #000;
 }
-
-.admin-header .admin-profile .dropdown-profile .username {
-    padding: 6px;
-    background-color: #343a40;
-    border-radius: 3px;
-    color: white;
-}
-
-.admin-header .admin-profile .dropdown-profile-content {
-    display: none;
-    margin: 0px;
-    margin-left: -15px;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 60px;
-    border-radius: 3px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.admin-header .admin-profile .dropdown-profile-content a {
-    color: black;
-    padding: 10px 14px;
-    text-decoration: none;
-    display: block;
-}
-
-.admin-header .admin-profile .dropdown-profile-content a:hover {
-    background-color: #ddd;
-    border-radius: 3px;
-}
-  
-.admin-header .admin-profile .dropdown-profile:hover .dropdown-profile-content {
-    display: block;
-}
-
